istio-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: main-gw
spec:
  gatewayClassName: istio
  # gatewayClassName: gke-l7-global-external-managed
  # addresses:
  #   - type: NamedAddress
  #     value: gke-ip
  listeners:
    - name: main-listener
      protocol: HTTPS
      hostname: irori235.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: main-gw-tls
            kind: Secret
            group: ""
    - name: main-gke-listener
      protocol: HTTPS
      hostname: gke.irori235.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: main-gw-gke-tls
            kind: Secret
            group: ""
    - name: main-wiki-listener
      protocol: HTTPS
      hostname: "wiki.irori235.dev"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: main-gw-wiki-tls
            kind: Secret
            group: ""
    - name: main-gke-wildcard-listener
      protocol: HTTPS
      hostname: "*.gke.irori235.dev"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: main-gw-gke-wildcard-tls
            kind: Secret
            group: ""
    - name: main-apps-wildcard-listener
      protocol: HTTPS
      hostname: "*.apps.irori235.dev"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: main-gw-apps-wildcard-tls
            kind: Secret
            group: ""
